--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "npm-run-all": "^4.1.5",
     "rxjs": "6.5.4",
     "tslib": "^2.0.0",
+    "webpack": "^5.75.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
